--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
 <title> Dubai Product Launch Event Management Experts | Creative & Impactful Launches </title>
   <meta name="description" content="Discover Dubai’s leading product launch event management experts. Learn how professional planners create tailored, seamless, and memorable product launch events for maximum brand impact">
-  <link rel="canonical" href="https://productlaunch.vercel.app">
+  <link rel="canonical" href="https://newproductlaunch.vercel.app">
 <meta name="robots" content="index,follow">
 
     <style>
